# spiir

./: .gitignore  README.md  main.py  pyproject.toml
spiir/: main.py
tests/: crypto.py  test_main.py
tests/testdata/: month_facit.enc  month_facit.parquet  transactions-2024.enc
