[tool.poetry]
name = "spiir-accounting"
version = "0.1.0"
description = "Create an Excel sheet overview of spending from https://spiir.com/"
authors = ["Arne Sørli"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.4"
numpy = "^1.23.2"
openpyxl = "^3.0.10"
isort = "^5.10.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
