[tool.poetry]
name = "spiir-accounting"
version = "0.1.0"
description = "Create an Excel sheet overview of spending from https://spiir.com/"
authors = ["Arne Sørli"]
license = "MIT"
readme = "README.md"
packages = [{include = "spiir"}]

[tool.poetry.dependencies]
numpy = ">=1.23.2"
openpyxl = ">=3.0.10"
pandas = ">=1.4.4"
python = ">=3.9,<3.14"

[tool.poetry.group.dev.dependencies]
isort = ">=5.10.1"
black = ">=22.8.0"
mypy = ">=0.971"
openpyxl-stubs = ">=0.1.21"
pandas-stubs = ">=1.4.3.220829"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
